--- a/style.css
+++ b/style.css
@@ -138,8 +138,36 @@ button:hover{
    margin-top:100px;
    width: 100%;
    height: auto;
- }
+ 
+   }
 
+   .og-row{
+   display:flex;
+   align-items: center;
+   justify-content: center;
+   gap:2%;
+   position:relative ;
+   flex-wrap: wrap;
+   margin-bottom: 2.5%;
+  
+   }
+
+  .unique{
+  width: 98%;
+  height: 360px;
+  border-radius: 5%;
+  position:relative;
+  cursor: pointer;
+
+  }
+
+  .og-row :hover{
+  width:120%;
+  height:375px;
+  opacity: 0.8;
+  box-shadow: 10px 5px 5px lightslategray;
+  
+ }
  
 
  .first-row{
@@ -153,7 +181,6 @@ button:hover{
    
  }
 
- 
 
  .first-row img{
    width: 47.5%;
